<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:padding="8dp"
    android:layout_marginTop="8dp"
    android:id="@+id/layoutSchedule"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvSubjects"
            style="@style/text_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/subject_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvStudyGroup"
            style="@style/text_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />


        <TextView
            android:id="@+id/tvClassRoom"
            style="@style/text_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_room"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvStudyTime"
            style="@style/text_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_study_time" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>